feat: expand translation keys for i18n support
- Add comprehensive translation keys to en/es/fr.json
- Include dashboard, employees, settings translations
- Add common UI elements (close, confirm)
- Add employee status translations (active, terminated, onLeave)
- Add system settings translation
- All major UI sections now have translation support

--- a/web/src/i18n/locales/en.json
+++ b/web/src/i18n/locales/en.json
@@ -18,7 +18,8 @@
     "employees": "Employees",
     "activeEmployees": "Active Employees",
     "totalPayroll": "Total Payroll",
-    "pendingLeave": "Pending Leave Requests"
+    "pendingLeave": "Pending Leave Requests",
+    "recentActivity": "Recent Activity"
   },
   "employees": {
     "title": "Employees",
@@ -28,13 +29,19 @@
     "email": "Email",
     "department": "Department",
     "status": "Status",
-    "actions": "Actions"
+    "actions": "Actions",
+    "active": "Active",
+    "terminated": "Terminated",
+    "onLeave": "On Leave",
+    "all": "All"
   },
   "settings": {
     "title": "Settings",
     "preferences": "User Preferences",
     "notifications": "Notifications",
     "security": "Security",
+    "maintenance": "Maintenance",
+    "system": "System Settings",
     "theme": "Theme",
     "language": "Language",
     "timezone": "Timezone",
@@ -52,7 +59,9 @@
     "back": "Back",
     "loading": "Loading...",
     "error": "Error",
-    "success": "Success"
+    "success": "Success",
+    "close": "Close",
+    "confirm": "Confirm"
   }
 }
 
