--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -1,9 +1,9 @@
 {
   "nav": {
-    "dashboard": "Panel",
+    "dashboard": "Tablero",
     "employees": "Empleados",
     "timeTracking": "Control de Tiempo",
-    "leave": "Gestión de Permisos",
+    "leave": "Gestión de Ausencias",
     "payroll": "Nómina",
     "compliance": "Cumplimiento",
     "benefits": "Beneficios",
@@ -12,13 +12,13 @@
     "logout": "Cerrar Sesión"
   },
   "dashboard": {
-    "title": "Panel",
+    "title": "Tablero",
     "welcome": "Bienvenido de nuevo",
     "overview": "Resumen",
     "employees": "Empleados",
     "activeEmployees": "Empleados Activos",
     "totalPayroll": "Nómina Total",
-    "pendingLeave": "Solicitudes de Permiso Pendientes",
+    "pendingLeave": "Solicitudes de Ausencia Pendientes",
     "recentActivity": "Actividad Reciente",
     "noActivity": "Sin actividad reciente"
   },
@@ -31,36 +31,98 @@
     "department": "Departamento",
     "position": "Posición",
     "hireDate": "Fecha de Contratación",
+    "terminationDate": "Fecha de Terminación",
     "status": "Estado",
     "actions": "Acciones",
     "active": "Activo",
     "terminated": "Terminado",
-    "onLeave": "De Permiso",
+    "onLeave": "De Baja",
     "all": "Todos",
     "employeeDetails": "Detalles del Empleado",
     "personalInfo": "Información Personal",
-    "employmentInfo": "Información Laboral"
+    "employmentInfo": "Información de Empleo",
+    "viewProfile": "Ver Perfil",
+    "editEmployee": "Editar Empleado",
+    "terminateEmployee": "Terminar Empleado",
+    "noEmployees": "No se encontraron empleados",
+    "employmentType": "Tipo de Empleo",
+    "loading": "Cargando empleados..."
   },
   "leave": {
-    "title": "Gestión de Permisos",
-    "myLeaves": "Mis Permisos",
+    "title": "Gestión de Ausencias",
+    "myLeaves": "Mis Ausencias",
     "pendingApprovals": "Aprobaciones Pendientes",
-    "leaveHistory": "Historial de Permisos",
-    "requestLeave": "Solicitar Permiso",
-    "leaveType": "Tipo de Permiso",
+    "leaveHistory": "Historial de Ausencias",
+    "requestLeave": "Solicitar Ausencia",
+    "leaveType": "Tipo de Ausencia",
     "startDate": "Fecha de Inicio",
     "endDate": "Fecha de Fin",
     "reason": "Razón",
+    "notes": "Notas",
     "status": "Estado",
     "pending": "Pendiente",
     "approved": "Aprobado",
     "rejected": "Rechazado",
     "approve": "Aprobar",
-    "reject": "Rechazar"
+    "reject": "Rechazar",
+    "duration": "Duración",
+    "days": "días",
+    "submittedOn": "Enviado el",
+    "noRequests": "No hay solicitudes de ausencia"
+  },
+  "payroll": {
+    "title": "Nómina",
+    "overview": "Resumen",
+    "payPeriod": "Período de Pago",
+    "payDate": "Fecha de Pago",
+    "totalAmount": "Monto Total",
+    "grossPay": "Pago Bruto",
+    "netPay": "Pago Neto",
+    "deductions": "Deducciones",
+    "hours": "Horas",
+    "regularHours": "Horas Regulares",
+    "overtimeHours": "Horas Extras",
+    "hourlyRate": "Tarifa por Hora",
+    "processPayroll": "Procesar Nómina",
+    "viewDetails": "Ver Detalles"
+  },
+  "timeTracking": {
+    "title": "Control de Tiempo",
+    "clockIn": "Registrar Entrada",
+    "clockOut": "Registrar Salida",
+    "totalHours": "Total de Horas",
+    "weeklyHours": "Horas Semanales",
+    "timesheets": "Hojas de Tiempo",
+    "viewTimecard": "Ver Tarjeta de Tiempo"
+  },
+  "compliance": {
+    "title": "Cumplimiento",
+    "alerts": "Alertas",
+    "documents": "Documentos",
+    "certifications": "Certificaciones",
+    "dueDate": "Fecha de Vencimiento",
+    "status": "Estado"
+  },
+  "benefits": {
+    "title": "Beneficios",
+    "healthInsurance": "Seguro de Salud",
+    "retirement": "Jubilación",
+    "paidTimeOff": "Tiempo Libre Pagado",
+    "enrollment": "Inscripción",
+    "myBenefits": "Mis Beneficios"
+  },
+  "bonuses": {
+    "title": "Bonos y Comisiones",
+    "bonuses": "Bonos",
+    "commissions": "Comisiones",
+    "total": "Total",
+    "pending": "Pendiente",
+    "paid": "Pagado",
+    "amount": "Monto"
   },
   "settings": {
     "title": "Configuración",
-    "description": "Administrar configuración del sistema y preferencias de usuario",
+    "description": "Gestionar configuración del sistema y preferencias del usuario",
     "system": "Configuración del Sistema",
     "preferences": "Preferencias de Usuario",
     "notifications": "Notificaciones",
@@ -101,6 +163,12 @@
     "add": "Agregar",
     "update": "Actualizar",
     "submit": "Enviar",
-    "reset": "Restablecer"
+    "reset": "Restablecer",
+    "yes": "Sí",
+    "no": "No",
+    "all": "Todos",
+    "none": "Ninguno",
+    "total": "Total",
+    "subtotal": "Subtotal"
   }
 }
