fix: correct Spanish and French translations for accuracy
Spanish corrections:
- 'Tablero' → 'Panel de Control' (more professional)
- 'Correo' → 'Correo Electrónico' (complete term)
- 'Posición' → 'Cargo' (correct HR terminology)
- 'Terminado' → 'Cesado' (proper HR term for terminated)
- 'Terminar Empleado' → 'Cesar Empleado' (correct verb)
- 'De Baja' → 'De Licencia' (proper leave term)
- 'Información de Empleo' → 'Información Laboral' (better term)
- 'Bonos' → 'Bonificaciones' (more formal)
- 'Tiempo Libre Pagado' → 'Tiempo Libre Remunerado' (correct)
- Added leave type translations

French corrections:
- 'Bienvenue' → 'Bienvenue de retour' (complete phrase)
- 'Terminé' → 'Licencié' (proper HR term)
- 'Terminer l'Employé' → 'Licencier l'Employé' (correct verb)
- 'Aperçu' → 'Vue d'ensemble' (more accurate for overview)
- 'Email' → 'Courriel' (proper French term)
- 'Type d'Emploi' → 'Type de Contrat' (more accurate)
- 'Avantages' → 'Avantages Sociaux' (complete term)
- 'Masse Salariale' instead of 'Paie Totale' (professional term)
- 'Pointer à l'Entrée' → 'Pointer à l'Arrivée' (more natural)
- 'Carte de Temps' → 'Fiche de Temps' (correct term)
- Added leave type translations

All translations now use professional HR terminology

--- a/web/src/i18n/locales/es.json
+++ b/web/src/i18n/locales/es.json
@@ -1,18 +1,18 @@
 {
   "nav": {
-    "dashboard": "Tablero",
+    "dashboard": "Panel de Control",
     "employees": "Empleados",
     "timeTracking": "Control de Tiempo",
     "leave": "Gestión de Ausencias",
     "payroll": "Nómina",
     "compliance": "Cumplimiento",
     "benefits": "Beneficios",
-    "bonuses": "Bonos y Comisiones",
+    "bonuses": "Bonificaciones y Comisiones",
     "settings": "Configuración",
     "logout": "Cerrar Sesión"
   },
   "dashboard": {
-    "title": "Tablero",
+    "title": "Panel de Control",
     "welcome": "Bienvenido de nuevo",
     "overview": "Resumen",
     "employees": "Empleados",
@@ -27,26 +27,27 @@
     "addEmployee": "Agregar Empleado",
     "searchPlaceholder": "Buscar empleados...",
     "name": "Nombre",
-    "email": "Correo",
+    "email": "Correo Electrónico",
     "department": "Departamento",
-    "position": "Posición",
+    "position": "Cargo",
     "hireDate": "Fecha de Contratación",
-    "terminationDate": "Fecha de Terminación",
+    "terminationDate": "Fecha de Cese",
     "status": "Estado",
     "actions": "Acciones",
     "active": "Activo",
-    "terminated": "Terminado",
-    "onLeave": "De Baja",
+    "terminated": "Cesado",
+    "onLeave": "De Licencia",
     "all": "Todos",
     "employeeDetails": "Detalles del Empleado",
     "personalInfo": "Información Personal",
-    "employmentInfo": "Información de Empleo",
+    "employmentInfo": "Información Laboral",
     "viewProfile": "Ver Perfil",
     "editEmployee": "Editar Empleado",
-    "terminateEmployee": "Terminar Empleado",
+    "terminateEmployee": "Cesar Empleado",
     "noEmployees": "No se encontraron empleados",
     "employmentType": "Tipo de Empleo",
-    "loading": "Cargando empleados..."
+    "loading": "Cargando empleados...",
+    "description": "Gestione su fuerza laboral y registros de empleados"
   },
   "leave": {
     "title": "Gestión de Ausencias",
@@ -56,8 +57,8 @@
     "requestLeave": "Solicitar Ausencia",
     "leaveType": "Tipo de Ausencia",
     "startDate": "Fecha de Inicio",
-    "endDate": "Fecha de Fin",
-    "reason": "Razón",
+    "endDate": "Fecha de Finalización",
+    "reason": "Motivo",
     "notes": "Notas",
     "status": "Estado",
     "pending": "Pendiente",
@@ -68,7 +69,16 @@
     "duration": "Duración",
     "days": "días",
     "submittedOn": "Enviado el",
-    "noRequests": "No hay solicitudes de ausencia"
+    "noRequests": "No hay solicitudes de ausencia",
+    "types": {
+      "vacation": "Vacaciones",
+      "sickLeave": "Licencia por Enfermedad",
+      "personalLeave": "Licencia Personal",
+      "bereavement": "Duelo",
+      "parentalLeave": "Licencia Parental",
+      "juryDuty": "Deber de Jurado",
+      "militaryLeave": "Licencia Militar"
+    }
   },
   "payroll": {
     "title": "Nómina",
@@ -76,12 +86,12 @@
     "payPeriod": "Período de Pago",
     "payDate": "Fecha de Pago",
     "totalAmount": "Monto Total",
-    "grossPay": "Pago Bruto",
-    "netPay": "Pago Neto",
+    "grossPay": "Salario Bruto",
+    "netPay": "Salario Neto",
     "deductions": "Deducciones",
     "hours": "Horas",
     "regularHours": "Horas Regulares",
-    "overtimeHours": "Horas Extras",
+    "overtimeHours": "Horas Extra",
     "hourlyRate": "Tarifa por Hora",
     "processPayroll": "Procesar Nómina",
     "viewDetails": "Ver Detalles"
@@ -107,13 +117,13 @@
     "title": "Beneficios",
     "healthInsurance": "Seguro de Salud",
     "retirement": "Jubilación",
-    "paidTimeOff": "Tiempo Libre Pagado",
+    "paidTimeOff": "Tiempo Libre Remunerado",
     "enrollment": "Inscripción",
     "myBenefits": "Mis Beneficios"
   },
   "bonuses": {
-    "title": "Bonos y Comisiones",
-    "bonuses": "Bonos",
+    "title": "Bonificaciones y Comisiones",
+    "bonuses": "Bonificaciones",
     "commissions": "Comisiones",
     "total": "Total",
     "pending": "Pendiente",
@@ -122,7 +132,7 @@
   },
   "settings": {
     "title": "Configuración",
-    "description": "Gestionar configuración del sistema y preferencias del usuario",
+    "description": "Gestionar configuración del sistema y preferencias de usuario",
     "system": "Configuración del Sistema",
     "preferences": "Preferencias de Usuario",
     "notifications": "Notificaciones",
@@ -133,7 +143,7 @@
     "timezone": "Zona Horaria",
     "dark": "Oscuro",
     "light": "Claro",
-    "emailNotifications": "Notificaciones por Correo",
+    "emailNotifications": "Notificaciones por Correo Electrónico",
     "pushNotifications": "Notificaciones Push",
     "twoFactorAuth": "Autenticación de Dos Factores",
     "sessionTimeout": "Tiempo de Espera de Sesión",
